--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <div class="section-title">
           <p>Video</p>
         </div>
-        <div id="video-content">
+        <div id="video-content" class="col-gap-l">
           <div id="video-highlight" class="section-bg-img col" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
             <div id="video-highlight-text" class="col-gap-m text-white">
               <div>
@@ -566,18 +566,84 @@
               </a>
             </div>
           </div>
-          <div id="video-list">
-            <ul>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
+          <ul id="video-list" class="row-gap-m">
+            <li class="video-list-item row-gap-s">
+              <div class="video-list-text col-gap-s">
+                <div>
+                  <label class="topic">topic</label>
+                </div>
+                <h4 class="serif">Headline level 4 text similar to body</h4>
+              </div>
+              <div class="video-list-embedded">
+              </div>
+            </li>
+            <li class="video-list-item row-gap-s">
+              <div class="video-list-text col-gap-s">
+                <div>
+                  <label class="topic">topic</label>
+                </div>
+                <h4 class="serif">Headline level 4 text similar to body</h4>
+              </div>
+              <div class="video-list-embedded">
+              </div>
+            </li>
+            <li class="video-list-item row-gap-s">
+              <div class="video-list-text col-gap-s">
+                <div>
+                  <label class="topic">topic</label>
+                </div>
+                <h4 class="serif">Headline level 4 text similar to body</h4>
+              </div>
+              <div class="video-list-embedded">
+              </div>
+            </li>
+            <li class="video-list-item row-gap-s">
+              <div class="video-list-text col-gap-s">
+                <div>
+                  <label class="topic">topic</label>
+                </div>
+                <h4 class="serif">Headline level 4 text similar to body</h4>
+              </div>
+              <div class="video-list-embedded">
+              </div>
+            </li>            
+          </ul>
+          
         </div>
       </section>
 
       <!-- Section: explore -->
-      <section id="explore" class="col-gap-m section-container">
-        <div id="explore-content"></div>
+      <section id="explore" class="section-container row-gap-m">
+          <div id="inspirations" class="section-aside col-gap-m">
+            <div class="section-title row between">
+              <p>inspirations</p>   
+              <p>
+                <i class="fa-solid fa-shuffle"></i>
+              </p>           
+            </div>
+            <ul id="inspirations-list">
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                </li>
+            </ul>
+          </div>
+          <div id="latest" class="section-aside"></div>
+          <div id="featured-authors" class="section-aside"></div>
       </section>
     </main>
 
