--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
               <div class="section-img">
                 <img src="./data/insights/thumbnail/test.jpg" />
                 <div class="component-bookmark-add">
-                  <!-- [Load Component] -->
                 </div>
               </div>
               <div>
@@ -168,7 +167,6 @@
                 </li>
               </ul>
               <div class="component-viewAll">
-                <!-- [Load Component] -->
               </div>
             </div>
           </div>
@@ -192,12 +190,10 @@
         <div class="section-title">
           <p>Monthly Awards</p>
           <div class="component-viewAll">
-            <!-- [Load Component] -->
           </div>
         </div>
         <div id="monthlyAwards-content">
           <div id="awards-list">
-            <!-- [Load Component] -->            
             <div class="card-awards text-white section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
               <div class="card-awards-container col-gap-m">
                 <div class="card-awards-label">
@@ -278,7 +274,6 @@
           <div class="section-title">
             <p>What's Trending</p>
             <div class="component-viewAll">
-              <!-- [Load Component] -->
             </div>
           </div>
           <div id="trending-content" class="row-gap-m">
@@ -286,7 +281,6 @@
               <div class="section-img">
                 <img src="./data/insights/thumbnail/test.jpg" />
                 <div class="component-bookmark-add">
-                  <!-- [Load Component] -->
                 </div>
               </div>
               <div>
@@ -330,8 +324,7 @@
                     </div>
                   </div>
                   <div class="row-gap-s">
-                    <p class="body-s text-gray">4 min read</p>
-                    <p class="body-s text-gray">·</p>
+                    <p class="body-s text-gray">By</p>
                     <p class="body-s text-gray">John Polanski</p>
                   </div>
                 </li>
@@ -347,8 +340,7 @@
                     </div>
                   </div>
                   <div class="row-gap-s">
-                    <p class="body-s text-gray">4 min read</p>
-                    <p class="body-s text-gray">·</p>
+                    <p class="body-s text-gray">By</p>
                     <p class="body-s text-gray">John Polanski</p>
                   </div>
                 </li>
@@ -364,8 +356,7 @@
                     </div>
                   </div>
                   <div class="row-gap-s">
-                    <p class="body-s text-gray">4 min read</p>
-                    <p class="body-s text-gray">·</p>
+                    <p class="body-s text-gray">By</p>
                     <p class="body-s text-gray">John Polanski</p>
                   </div>
                 </li>
@@ -381,8 +372,7 @@
                     </div>
                   </div>
                   <div class="row-gap-s">
-                    <p class="body-s text-gray">4 min read</p>
-                    <p class="body-s text-gray">·</p>
+                    <p class="body-s text-gray">By</p>
                     <p class="body-s text-gray">John Polanski</p>
                   </div>
                 </li>
@@ -472,7 +462,6 @@
         <div class="section-title">
           <p>Saved For Later</p>
           <div class="component-viewAll">
-            <!-- [Load Component] -->
           </div>
         </div>
         <div id="savedForLater-content">
@@ -545,6 +534,85 @@
         </div>
       </section>
 
+
+      <!-- Section: explore -->
+      <section id="explore" class="section-container">
+
+        <!-- Inspirations -->
+          <div id="inspirations" class="section-aside col-gap-m">
+            <div class="section-title row between">
+              <p>inspirations</p>   
+              <p>
+                <i class="fa-solid fa-shuffle"></i>
+              </p>           
+            </div>
+            <ul id="inspirations-list">
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                </li>
+                <li class="inspirations-item section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                </li>
+            </ul>
+          </div>
+
+          <!-- The latest -->
+          <div id="latest" class="section-aside">
+            <div class="section-title row between">
+              <p>
+                the latest
+              </p>
+              <div class="component-viewAll">
+              </div>
+            </div>
+            <ul id="latest-list">
+              <li class="row-gap-m">
+                <div class="section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                  <label class="topic topic-white text-white">topic</label>
+                </div>
+                <div>
+                  <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
+                  <p>
+                    <i class="fa-regular fa-clock"></i>
+                  </p>
+                  <p>1 day ago</p>
+                  <p>·</p>
+                  <p>1 min read</p>
+                </div>                
+              </li>
+            </ul>
+          </div>
+          <div id="featured-authors" class="section-aside"></div>
+      </section>
+
+
       <!-- Section: Video -->
       <section id="video" class="col-gap-m section-container">
         <div class="section-title">
@@ -610,40 +678,6 @@
           </ul>
           
         </div>
-      </section>
-
-      <!-- Section: explore -->
-      <section id="explore" class="section-container row-gap-m">
-          <div id="inspirations" class="section-aside col-gap-m">
-            <div class="section-title row between">
-              <p>inspirations</p>   
-              <p>
-                <i class="fa-solid fa-shuffle"></i>
-              </p>           
-            </div>
-            <ul id="inspirations-list">
-                <li class="inspirations-item section-img">
-                  <img src="./data/insights/thumbnail/test.jpg" />
-                </li>
-                <li class="inspirations-item section-img">
-                  <img src="./data/insights/thumbnail/test.jpg" />
-                </li>
-                <li class="inspirations-item section-img">
-                  <img src="./data/insights/thumbnail/test.jpg" />
-                </li>
-                <li class="inspirations-item section-img">
-                  <img src="./data/insights/thumbnail/test.jpg" />
-                </li>
-                <li class="inspirations-item section-img">
-                  <img src="./data/insights/thumbnail/test.jpg" />
-                </li>
-                <li class="inspirations-item section-img">
-                  <img src="./data/insights/thumbnail/test.jpg" />
-                </li>
-            </ul>
-          </div>
-          <div id="latest" class="section-aside"></div>
-          <div id="featured-authors" class="section-aside"></div>
       </section>
     </main>
 
