latest col ratio

--- a/index.html
+++ b/index.html
@@ -590,14 +590,14 @@
               </div>
             </div>
             <ul id="latest-list">
-              <li class="row-gap-m">
+              <li class="latest-list-item row-gap-m">
                 <div class="section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
                   <div class="component-bookmark-add">
                   </div>
                   <label class="topic topic-white text-white">topic</label>
                 </div>
-                <div>
+                <div class="latest-list-text">
                   <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
                   <p>
                     <i class="fa-regular fa-clock"></i>
