--- a/index.html
+++ b/index.html
@@ -599,12 +599,20 @@
                 </div>
                 <div class="latest-list-text">
                   <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
-                  <p>
-                    <i class="fa-regular fa-clock"></i>
-                  </p>
-                  <p>1 day ago</p>
-                  <p>·</p>
-                  <p>1 min read</p>
+                  <div class="latest-time row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-clock"></i>
+                    </p>
+                    <p>1 day ago</p>
+                    <p>·</p>
+                    <p>1 min read</p>
+                  </div>
+                  <div class="latest-author row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-circle-user"></i>
+                    </p>
+                    <p>Eleanor Montgomery</p>
+                  </div>
                 </div>                
               </li>
             </ul>
