--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                   </div>
                   <label class="topic topic-white text-white">topic</label>
                 </div>
-                <div class="latest-list-text">
+                <div class="latest-list-text col-gap-s">
                   <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
                   <div class="latest-time row-gap-s">
                     <p>
