--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                   <img src="./data/insights/thumbnail/test.jpg" />
                   <div class="component-bookmark-add">
                   </div>
-                  <label class="topic topic-white text-white">topic</label>
+                  <label class="topic topic-white text-white button-text">topic</label>
                 </div>
                 <div class="latest-list-text col-gap-s">
                   <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
