insert topic hovering in inspirations

--- a/index.html
+++ b/index.html
@@ -551,6 +551,7 @@
                   <img src="./data/insights/thumbnail/test.jpg" />
                   <div class="component-bookmark-add">
                   </div>
+                  <label class="topic button-text topic-white text-white">topic</label>
                 </li>
                 <li class="inspirations-item section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
