copy latest list

--- a/index.html
+++ b/index.html
@@ -590,7 +590,82 @@
               <div class="component-viewAll">
               </div>
             </div>
-            <ul id="latest-list">
+            <ul id="latest-list" class="col-gap-m">
+              <li class="latest-list-item row-gap-m">
+                <div class="section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                  <label class="topic topic-white text-white button-text">topic</label>
+                </div>
+                <div class="latest-list-text col-gap-s">
+                  <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
+                  <div class="latest-time row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-clock"></i>
+                    </p>
+                    <p>1 day ago</p>
+                    <p>·</p>
+                    <p>1 min read</p>
+                  </div>
+                  <div class="latest-author row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-circle-user"></i>
+                    </p>
+                    <p>Eleanor Montgomery</p>
+                  </div>
+                </div>                
+              </li>
+              <li class="latest-list-item row-gap-m">
+                <div class="section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                  <label class="topic topic-white text-white button-text">topic</label>
+                </div>
+                <div class="latest-list-text col-gap-s">
+                  <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
+                  <div class="latest-time row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-clock"></i>
+                    </p>
+                    <p>1 day ago</p>
+                    <p>·</p>
+                    <p>1 min read</p>
+                  </div>
+                  <div class="latest-author row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-circle-user"></i>
+                    </p>
+                    <p>Eleanor Montgomery</p>
+                  </div>
+                </div>                
+              </li>
+              <li class="latest-list-item row-gap-m">
+                <div class="section-img">
+                  <img src="./data/insights/thumbnail/test.jpg" />
+                  <div class="component-bookmark-add">
+                  </div>
+                  <label class="topic topic-white text-white button-text">topic</label>
+                </div>
+                <div class="latest-list-text col-gap-s">
+                  <h3 class="serif">Headline level 3 text for editor’s pick title</h3>
+                  <div class="latest-time row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-clock"></i>
+                    </p>
+                    <p>1 day ago</p>
+                    <p>·</p>
+                    <p>1 min read</p>
+                  </div>
+                  <div class="latest-author row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-circle-user"></i>
+                    </p>
+                    <p>Eleanor Montgomery</p>
+                  </div>
+                </div>                
+              </li>
               <li class="latest-list-item row-gap-m">
                 <div class="section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
