--- a/index.html
+++ b/index.html
@@ -549,34 +549,27 @@
             <ul id="inspirations-list">
                 <li class="inspirations-item section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
-                  <div class="component-bookmark-add">
-                  </div>
-                  <label class="topic button-text topic-white text-white">topic</label>
+                  <label class="topic topic-white button-text text-white">topic</label>
                 </li>
                 <li class="inspirations-item section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
-                  <div class="component-bookmark-add">
-                  </div>
+                  <label class="topic topic-white button-text text-white">topic</label>
                 </li>
                 <li class="inspirations-item section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
-                  <div class="component-bookmark-add">
-                  </div>
+                  <label class="topic topic-white button-text text-white">topic</label>
                 </li>
                 <li class="inspirations-item section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
-                  <div class="component-bookmark-add">
-                  </div>
+                  <label class="topic topic-white button-text text-white">topic</label>
                 </li>
                 <li class="inspirations-item section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
-                  <div class="component-bookmark-add">
-                  </div>
+                  <label class="topic topic-white button-text text-white">topic</label>
                 </li>
                 <li class="inspirations-item section-img">
                   <img src="./data/insights/thumbnail/test.jpg" />
-                  <div class="component-bookmark-add">
-                  </div>
+                  <label class="topic topic-white button-text text-white">topic</label>
                 </li>
             </ul>
           </div>
