make featured authors frames

--- a/index.html
+++ b/index.html
@@ -686,7 +686,27 @@
               </li>
             </ul>
           </div>
-          <div id="featured-authors" class="section-aside"></div>
+
+          <!-- Fatured Authors -->
+          <div id="featured-authors" class="section-aside col-gap-m">
+            <div class="section-title">
+              <p>featured authors</p>
+            </div>
+            <ul class="featured-authors-list">
+              <li class="featured-authors-item row-gap-s">
+                <div  class="featured-authors-avatar">
+                  <i class="fa-regular fa-circle-user"></i>
+                </div>
+                <div class="featured-authors-text col">
+                  <p>Grace Bennett</p>
+                  <ul class="row-gap-s">
+                    <li>Urban</li>
+                    <li>Cultural</li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
       </section>
 
 
