featured authors - center row

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
               <p>featured authors</p>
             </div>
             <ul class="featured-authors-list">
-              <li class="featured-authors-item row-gap-s">
+              <li class="featured-authors-item row-gap-m">
                 <h3>
                   <i class="fa-regular fa-circle-user"></i>
                 </h3>
