featured authors - decorate row

--- a/index.html
+++ b/index.html
@@ -698,10 +698,11 @@
                   <i class="fa-regular fa-circle-user"></i>
                 </h3>
                 <div class="featured-authors-text col">
-                  <p>Grace Bennett</p>
-                  <ul class="row-gap-s">
-                    <li>Urban</li>
-                    <li>Cultural</li>
+                  <p class="bold">Grace Bennett</p>
+                  <ul class="row">
+                    <li class="body-s">Urban</li>
+                    <li class="body-s">&nbsp;·&nbsp;</li>
+                    <li class="body-s">Cultural</li>
                   </ul>
                 </div>
               </li>
